feat: enable right-click to equip mask